Client is now connecting and receiving stuff
